// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`linkType option should work when linkType option is "false": DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id="existing-style">.existing { color: yellow }</style>
<link rel="stylesheet" href="simple.css"><script charset="utf-8" src="simple.bundle.js"></script></head>
<body>
  <h1>Body</h1>
  <div class="target"></div>
  <iframe class="iframeTarget"></iframe>


</body></html>"
`;

exports[`linkType option should work when linkType option is "false": errors 1`] = `[]`;

exports[`linkType option should work when linkType option is "false": warnings 1`] = `[]`;

exports[`linkType option should work when linkType option is "text/css": DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id="existing-style">.existing { color: yellow }</style>
<link rel="stylesheet" type="text/css" href="simple.css"><script charset="utf-8" src="simple.bundle.js"></script></head>
<body>
  <h1>Body</h1>
  <div class="target"></div>
  <iframe class="iframeTarget"></iframe>


</body></html>"
`;

exports[`linkType option should work when linkType option is "text/css": errors 1`] = `[]`;

exports[`linkType option should work when linkType option is "text/css": warnings 1`] = `[]`;

exports[`linkType option should work without linkType option: DOM 1`] = `
"<!DOCTYPE html><html><head>
  <title>style-loader test</title>
  <style id="existing-style">.existing { color: yellow }</style>
<link rel="stylesheet" type="text/css" href="simple.css"><script charset="utf-8" src="simple.bundle.js"></script></head>
<body>
  <h1>Body</h1>
  <div class="target"></div>
  <iframe class="iframeTarget"></iframe>


</body></html>"
`;

exports[`linkType option should work without linkType option: errors 1`] = `[]`;

exports[`linkType option should work without linkType option: warnings 1`] = `[]`;
